[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "requests",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
]
exclude = [
    'examples/whisper/whisper.cpp',
    'livekit/_proto',
]

[tool.cibuildwheel]
build = "cp39-*"

manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_i686-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"