[project]
name = "python-sdks"
version = "0.1.0"
description = "LiveKit Python SDKs monorepo"
requires-python = ">=3.9"
dependencies = ["livekit", "livekit-api", "livekit-protocol", "livekit-memory"]

[tool.uv.workspace]
members = ["livekit-rtc", "livekit-api", "livekit-protocol", "livekit-memory"]

[tool.uv.sources]
livekit = { workspace = true }
livekit-api = { workspace = true }
livekit-protocol = { workspace = true }
livekit-memory = { workspace = true }

[dependency-groups]
dev = [
    # Linting and type checking
    "ruff>=0.8.5",
    "mypy>=1.13.0",
    "types-aiofiles>=24",
    "ipython>=8.0.0",
    # Testing
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    # Build and packaging
    "requests",
    "wheel",
    "twine",
    "auditwheel; sys_platform == 'linux'",
    "cibuildwheel",
    # Additional dependencies
    "matplotlib",
    "pydantic",
    "numpy",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".github"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["livekit"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--import-mode=importlib", "--ignore=examples"]


[tool.mypy]
exclude = "(build|setup\\.py|livekit-rtc/rust-sdks.*)"
namespace_packages = true
explicit_package_bases = true
mypy_path = "livekit-protocol:livekit-api:livekit-rtc:livekit-memory"
strict = true
disallow_any_generics = false
plugins = ["pydantic.mypy"]

# Optional, untyped third-party deps used by livekit-memory (only present when the
# corresponding extra is installed).
[[tool.mypy.overrides]]
module = ["model2vec.*", "usearch.*"]
ignore_missing_imports = true
