[metadata]
name = livekit
version = attr: livekit.__version__
license = Apache-2.0
description = LiveKit Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True

[options]
packages = find:
install_requires = 
    pyee>=9.0.0
python_requires = >=3.7

[options.package_data]
* = *.pyi *.dylib