[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-api"
version = "0.8.0"
description = "Python Server API for LiveKit"
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
keywords = ["webrtc", "realtime", "audio", "video", "livekit"]
authors = [
    { name = "LiveKit", email = "support@livekit.io" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pyjwt>=2.0.0",
    "aiohttp>=3.9.0",
    "protobuf>=4",
    "types-protobuf>=4",
    "livekit-protocol>=1.1.1,<2.0.0",
]

[project.urls]
Documentation = "https://docs.livekit.io"
Website = "https://livekit.io/"
Source = "https://github.com/livekit/python-sdks/"

[tool.uv.sources]
livekit-protocol = { workspace = true }
