[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-memory"
dynamic = ["version"]
description = "In-process, in-memory semantic memory for LiveKit agents — sub-10ms retrieval"
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
keywords = ["webrtc", "realtime", "livekit", "memory", "embeddings", "semantic-search", "vector-search"]
authors = [
    { name = "LiveKit", email = "support@livekit.io" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
# Fast static (no-transformer) embedder — recommended default for the <10ms budget.
# model2vec wheels require Python >=3.10.
model2vec = ["model2vec>=0.8; python_version >= '3.10'"]
# Approximate-nearest-neighbour index for large per-user corpora (100k–1M+ vectors).
# usearch wheels require Python >=3.10; on 3.9 the package gracefully uses brute force.
ann = ["usearch>=2.25; python_version >= '3.10'"]
# Optional ONNX transformer embedder (higher recall, ~10ms embed — opt in knowingly).
onnx = ["fastembed>=0.8; python_version >= '3.10'"]
# Everything needed for the recommended production setup.
recommended = [
    "model2vec>=0.8; python_version >= '3.10'",
    "usearch>=2.25; python_version >= '3.10'",
]

[project.urls]
Documentation = "https://docs.livekit.io"
Website = "https://livekit.io/"
Source = "https://github.com/livekit/python-sdks/"

[tool.hatch.version]
path = "livekit/memory/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
