[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "requests",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-*"
skip = "*-musllinux_*"  # not supported (libwebrtc requires glibc)
before-build = "pip install requests && python rust-sdks/download_ffi.py --output livekit/rtc/resources"
