[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "requests",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp39-*"
skip = "*-musllinux_*"  # not supported (libwebrtc requires glibc)
before-build = "pip install requests && python rust-sdks/download_ffi.py --output livekit/rtc/resources"

# macOS deployment targets must match the FFI binaries (see rust-sdks/.github/workflows/ffi-builds.yml)
# x86_64 supports macOS 10.15+, arm64 requires macOS 11.0+
[[tool.cibuildwheel.overrides]]
select = "*macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[[tool.cibuildwheel.overrides]]
select = "*macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
