[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "requests",
]
build-backend = "setuptools.build_meta"

[project]
name = "livekit"
dynamic = ["version"]
description = "Python Real-time SDK for LiveKit"
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
keywords = ["webrtc", "realtime", "audio", "video", "livekit"]
authors = [
    { name = "LiveKit", email = "support@livekit.io" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "protobuf>=4.25.0",
    "types-protobuf>=3",
    "aiofiles>=24",
    "numpy>=1.26",
]

[project.urls]
Documentation = "https://docs.livekit.io"
Website = "https://livekit.io/"
Source = "https://github.com/livekit/python-sdks/"

[tool.setuptools.dynamic]
version = { attr = "livekit.rtc.version.__version__" }

[tool.setuptools.packages.find]
include = ["livekit.*"]

[tool.setuptools.package-data]
"livekit.rtc" = ["_proto/*.py", "py.typed", "*.pyi", "**/*.pyi"]
"livekit.rtc.resources" = [
    "*.so",
    "*.dylib",
    "*.dll",
    "LICENSE.md",
    "*.h",
    "jupyter-html/index.html",
]

[tool.cibuildwheel]
build = "cp39-*"
skip = "*-musllinux_*"  # not supported (libwebrtc requires glibc)
before-build = "pip install requests && python rust-sdks/download_ffi.py --output livekit/rtc/resources"

# macOS deployment targets must match the FFI binaries (see rust-sdks/.github/workflows/ffi-builds.yml)
# x86_64 supports macOS 10.15+, arm64 requires macOS 11.0+
[[tool.cibuildwheel.overrides]]
select = "*macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.15" }

[[tool.cibuildwheel.overrides]]
select = "*macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
